--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
   flickr:
   facebook:
   foursquare:
-  github: "hijiangtao"
+  github: "wentao51"
   gitlab:
   google_plus:
   keybase:
@@ -126,11 +126,11 @@ author:
   stackoverflow: # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam: # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr:
-  twitter: "hijiangtao"
+  twitter: "Cafa_Wen"
   vine:
-  weibo: "hijiangtao"
+  weibo: 
   xing:
-  youtube: # "https://youtube.com/c/MichaelRoseDesign"
+  youtube: # "https://www.youtube.com/channel/UCQBkUPS0Pwp9LDrwCxLhmag"
   cv: "/assets/doc/TaoJiang-ResumeCN.pdf"
 
 # Reading Files
