--- a/_config.yml
+++ b/_config.yml
@@ -118,9 +118,9 @@ author:
   gitlab:
   google_plus:
   keybase:
-  instagram:
+  instagram: "wentao_zeng_zwt"
   lastfm:
-  linkedin: "hijiangtao"
+  linkedin: "曾文涛"
   pinterest:
   soundcloud:
   stackoverflow: # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
@@ -130,7 +130,7 @@ author:
   vine:
   weibo: 
   xing:
-  youtube: # "https://www.youtube.com/channel/UCQBkUPS0Pwp9LDrwCxLhmag"
+  youtube: "https://www.youtube.com/channel/UCQBkUPS0Pwp9LDrwCxLhmag"
   cv: "/assets/doc/TaoJiang-ResumeCN.pdf"
 
 # Reading Files
