--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ name: "Wentao Zeng"
 description: "All I'm saying is inside, I had the element of surprise."
 url: "https://hijiangtao.github.io" # the base hostname & protocol for your site e.g.
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "hijiangtao/hijiangtao.github.io"
+repository: "wentao51/Wentao-research-projects"
 teaser: # "/images/wentao.jpeg"
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
@@ -120,7 +120,7 @@ author:
   keybase:
   instagram: "wentao_zeng_zwt"
   lastfm:
-  linkedin: "曾文涛"
+  linkedin: "534991364@qq.com"
   pinterest:
   soundcloud:
   stackoverflow: # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
