--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
   keybase:
   instagram: "wentao_zeng_zwt"
   lastfm:
-  linkedin: "534991364@qq.com"
+  linkedin: 
   pinterest:
   soundcloud:
   stackoverflow: # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
