--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Post"
-    url: /post
+  - title: "Posts"
+    url: /posts
 
   - title: "Categories"
     url: /categories
